[package]
name = "usdc-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.17"
solana-sdk = "1.17"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3"
askama = "0.12"
anyhow = "1.0"
reqwest = "0.11"
